force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/EmailLogPollRequest__c.object-meta.xml
<CustomObject>
    <description>Tracks the long-poll status for an Email Log file request. Each record represents one poll attempt. When the file is still Pending, a clone is created (ScheduledTime = now + 1 min) so the Record-Triggered Flow's scheduled path re-fires automatically. Child of AuditLogEntry__c.</description>
    <label>Email Log Poll Request</label>
    <nameField>
        <label>Email Log Poll Request Name</label>
        <type>AutoNumber</type>
        <displayFormat>ELPR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Email Log Poll Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>