force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/fields/AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptCount__c</fullName>
    <description>Number of poll attempts made so far for this chain. Incremented on each clone. When AttemptCount reaches MAX_POLL_ATTEMPTS (30), the flow marks the parent EmailLogFile__c as RequestTimedOut instead of creating a new clone.</description>
    <defaultValue>0</defaultValue>
    <label>Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>