force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/fields/AuditLogEntry__c.field-meta.xml
<CustomField>
    <fullName>AuditLogEntry__c</fullName>
    <description>Master-detail relationship to the parent AuditLogEntry__c record (EntryType = PollRequest) that groups all poll attempts for one log request.</description>
    <label>Audit Log Entry</label>
    <referenceTo>AuditLogEntry__c</referenceTo>
    <relationshipLabel>Email Log Poll Requests</relationshipLabel>
    <relationshipName>EmailLogPollRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>