force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/fields/EmailLogFile__c.field-meta.xml
<CustomField>
    <fullName>EmailLogFile__c</fullName>
    <description>Lookup to the EmailLogFile__c row being polled. ProcessingStatus transitions from Requested → ReadyToDownload (or RequestTimedOut) based on poll results.</description>
    <label>Email Log File</label>
    <referenceTo>EmailLogFile__c</referenceTo>
    <relationshipLabel>Email Log Poll Requests</relationshipLabel>
    <relationshipName>EmailLogPollRequests</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>