force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/fields/LogSearchId__c.field-meta.xml
<CustomField>
    <fullName>LogSearchId__c</fullName>
    <description>The Salesforce log_search_id (e.g. 0IVg50000000X7F) extracted from the editEmailLogSearch.apexp POST response. The EmailLogPollService queries the overview page using this ID to determine readiness.</description>
    <label>Log Search Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>