force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/fields/PollStatus__c.field-meta.xml
<CustomField>
    <fullName>PollStatus__c</fullName>
    <description>Current state of this poll attempt. Pending = file still generating; Ready = file available for download (download triggered); TimedOut = max attempts reached; Failed = overview page returned an error.</description>
    <label>Poll Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>TimedOut</fullName>
                <label>Timed Out</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>