force-app/main/default/email_log_auditor/objects/EmailLogPollRequest__c/fields/ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTime__c</fullName>
    <description>The exact DateTime at which the Record-Triggered Flow's scheduled path should fire to poll the overview page. Set to NOW() + 1 minute when the record is created. The flow clones this record with a new ScheduledTime when the file is still Pending.</description>
    <label>Scheduled Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>